# arxanas.github.io

./: .gitignore  CNAME  README.md  budget.json  build.py  index.html  index.template.html  pyproject.toml  requirements-dev.txt  requirements.txt  style.css
.github/workflows/: main.yml
281/: index.html
281/code-deduplication/: index.html
281/dealing-with-caen/: index.html
281/from-eecs-183-and-280/: index.html
281/painless-automated-testing/: index.html
281/sublime-clang/: index.html
281/terminal-tips-and-tricks/: index.html
blog/: index.html
blog/data-comprehension-syntaxes/: index.html
blog/dot-name-email-address/: index.html
blog/getting-a-job-in-pl/: index.html
blog/lan-adapter/: index.html
blog/mail-server/: index.html
blog/messenger-conversation-macros/: index.html
blog/monotonicity/: index.html
blog/my-steno-system/: index.html
blog/ocaml-file-extensions/: index.html
blog/parsing-contextual-keywords/: index.html
blog/pyqt-designer/: index.html
blog/rust-modules-for-python-users/: index.html
blog/smash-bros-parabola-rule/: index.html
blog/smash-training-retrospective/: index.html
blog/steno-adventures-part-1/: index.html
blog/steno-adventures-part-2/: index.html
blog/steno-journal/: index.html
blog/union-vs-sum-types/: index.html
blog/will-i-ever-use-this/: index.html
data/: budget.csv
resume/: index.html
