[project]
name = "arxanas.github.io"
version = "0.1"
description = ""
authors = [{ name = "Waleed Khan", email = "me@waleedkhan.name" }]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]

[tool.pytest.ini_options]
python_files = "*.py"
